--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "collectCoverageFrom": [
       "src/**/*.{ts,tsx}",
       "!src/index.tsx",
-      "!src/reportWebVitals.ts"
+      "!src/reportWebVitals.ts",
+      "!src/**/*.d.ts"
     ]
   },
   "lint-staged": {
