--- a/package.json
+++ b/package.json
@@ -4,35 +4,24 @@
   "private": true,
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.3.0",
-    "@testing-library/user-event": "^13.5.0",
     "@types/react": "^19.1.0",
     "@types/react-dom": "^19.1.1",
     "bootstrap": "^5.3.5",
     "husky": "^9.1.7",
     "lint-staged": "^15.5.0",
+    "next": "^15.3.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-scripts": "5.0.1",
     "sass": "^1.86.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --coverage",
-    "test:nowatch": "react-scripts test --coverage --watchAll=false",
-    "eject": "react-scripts eject",
+    "dev": "next dev --turbopack",
+    "build": "next build",
+    "start": "npx serve@latest ./build",
+    "test": "jest --coverage",
+    "test:nowatch": "jest --coverage --watchAll=false",
     "prepare": "husky"
-  },
-  "jest": {
-    "collectCoverageFrom": [
-      "src/**/*.{ts,tsx}",
-      "!src/index.tsx",
-      "!src/reportWebVitals.ts",
-      "!src/**/*.d.ts"
-    ]
   },
   "lint-staged": {
     "*.js": "eslint --fix"
@@ -56,6 +45,16 @@
     ]
   },
   "devDependencies": {
-    "@types/jest": "^29.5.14"
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
+    "@types/jest": "^29.5.14",
+    "babel-jest": "^29.7.0",
+    "eslint": "^9.24.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "ts-node": "^10.9.2",
+    "typescript": "5.8.3"
   }
 }
