--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@tailwindcss/postcss": "^4.1.4",
     "@testing-library/dom": "^10.4.0",
     "@types/react": "^19.1.0",
     "@types/react-dom": "^19.1.1",
@@ -13,9 +14,11 @@
     "husky": "^9.1.7",
     "lint-staged": "^15.5.0",
     "next": "^15.3.0",
+    "postcss": "^8.5.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "sass": "^1.86.3",
+    "tailwindcss": "^4.1.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
