--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
       "esnext"
     ],
     "module": "esnext",
-    "moduleResolution": "node",
+    "moduleResolution": "bundler",
     "target": "es2015",
     "allowJs": true,
     "allowSyntheticDefaultImports": true,
@@ -33,7 +33,7 @@
     "build/types/**/*.ts",
     "next-env.d.ts",
     ".next/types/**/*.ts"
-  ],
+, "postcss.config.mjs", "tailwind.config.js"  ],
   "exclude": [
     "node_modules"
   ]
