--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "@testing-library/dom": "^10.4.0",
     "@types/react": "^19.1.0",
     "@types/react-dom": "^19.1.1",
-    "bootstrap": "^5.3.5",
+    "bootstrap": "^5.3.7",
+    "bootstrap-icons": "^1.13.1",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-react": "^7.37.5",
